k8s/load_balancing/vue-istio-lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vue-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: vue-service-destination
spec:
  host: vue-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vue-service-route
spec:
  hosts:
    - "*"
  gateways:
    - vue-service-gateway
  http:
    - route:
      - destination:
          host: vue-service
          subset: v1
